[package]
name = "b2c-migrator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
chrono = "0.4.41"
csv = "1.3.1"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["json"] }
rusqlite = "0.36.0"
