[package]
name = "b2c-migrator"
version = "0.2.5"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = [
    "full",
    "test-util",
] } # Added "test-util"
chrono = "0.4.41"
csv = "1.3.1"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.27"
reqwest = { version = "0.12.20", features = ["json"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
indicatif = "0.17.11"
clap = "4.5.40"

[dev-dependencies]
mockito = "1" # Using "1" to get the latest 1.x.y version
# tokio-test = "0.4" # If needed later for more advanced async test utilities
